add prelim layout styling

--- a/index.html
+++ b/index.html
@@ -57,217 +57,219 @@ The availability element extends the full width of the card, with a dark grey ba
 </header>
 <body>
 
-<!-- card one -->
-	<article class="cardOne">
-		<header>
-			<h1>Unbreakable</h1>
-		</header>
-
-		<section class="sectionOne">
-
-			<img src="../img/unbreakable.png" alt="unbreakable">
-
-			<div>
-				<p>
-					<!-- start slipsum code -->
-
-					Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
-
-					<!-- please do not remove this line -->
-
-					<div style="display:none;">
-					<a href="http://slipsum.com">lorem ipsum</a></div>
-
-					<!-- end slipsum code -->
-				</p>
-			</div>
-
-			<div class="availability">
-				<p>Available</p>
-			</div>
-		</section>
-
-		<section class="sectionTwo">
+	<div class="mainContent">
+	<!-- card one -->
+		<article class="cardOne">
 			<header>
-				<h3>Specifications</h3>
+				<h1>Unbreakable</h1>
 			</header>
 
-			<ul>
-				<li>Length:</li>
-				<li>Rated:</li>
-			</ul>
-			<h5>Product availability at time of purchase not guaranteed.</h5>
-		</section>
+			<section class="sectionOne">
 
-		<section class="sectionThree">
-			<h3>Price</h3>
-			<ul>
-				<li>1-5: $9.99</li>
-				<li>5-10: $7.99</li>
-				<li>10+: $5.99</li>
-			</ul>
-		</section>
+				<img src="../img/unbreakable.png" alt="unbreakable">
+
+				<div>
+					<p>
+						<!-- start slipsum code -->
+
+						Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
+
+						<!-- please do not remove this line -->
+
+						<div style="display:none;">
+						<a href="http://slipsum.com">lorem ipsum</a></div>
+
+						<!-- end slipsum code -->
+					</p>
+				</div>
+
+				<div class="availability">
+					<p>Available</p>
+				</div>
+			</section>
+
+			<section class="sectionTwo">
+				<header>
+					<h3>Specifications</h3>
+				</header>
+
+				<ul>
+					<li>Length:</li>
+					<li>Rated:</li>
+				</ul>
+				<h5>Product availability at time of purchase not guaranteed.</h5>
+			</section>
+
+			<section class="sectionThree">
+				<h3>Price</h3>
+				<ul>
+					<li>1-5: $9.99</li>
+					<li>5-10: $7.99</li>
+					<li>10+: $5.99</li>
+				</ul>
+			</section>
+
+		</article>
+
+	<!-- card two -->
+		<article class="cardTwo">
+			<header>
+				<h1>Pulp Fiction</h1>
+			</header>
+
+			<section class="sectionOne">
+
+				<img src="../img/pulpFiction.jpg" alt="pulpFiction">
+
+				<div>
+					<p>
+						<!-- start slipsum code -->
+
+						Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+
+						<!-- please do not remove this line -->
+
+						<div style="display:none;">
+						<a href="http://slipsum.com">lorem ipsum</a></div>
+
+						<!-- end slipsum code -->
+					</p>
+				</div>
+
+				<div class="availability">
+					<p>Available</p>
+				</div>
+			</section>
+
+			<section class="sectionTwo">
+				<header>
+					<h3>Specifications</h3>
+				</header>
+
+				<ul>
+					<li>Length:</li>
+					<li>Rated:</li>
+				</ul>
+				<h5>Product availability at time of purchase not guaranteed.</h5>
+			</section>
+
+			<section class="sectionThree">
+				<h3>Price</h3>
+				<ul>
+					<li>1-5: $9.99</li>
+					<li>5-10: $7.99</li>
+					<li>10+: $5.99</li>
+				</ul>
+			</section>
 
 	</article>
 
-<!-- card two -->
-	<article class="cardTwo">
-		<header>
-			<h1>Pulp Fiction</h1>
-		</header>
-
-		<section class="sectionOne">
-
-			<img src="../img/pulpFiction.jpg" alt="pulpFiction">
-
-			<div>
-				<p>
-					<!-- start slipsum code -->
-
-					Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
-
-					<!-- please do not remove this line -->
-
-					<div style="display:none;">
-					<a href="http://slipsum.com">lorem ipsum</a></div>
-
-					<!-- end slipsum code -->
-				</p>
-			</div>
-
-			<div class="availability">
-				<p>Available</p>
-			</div>
-		</section>
-
-		<section class="sectionTwo">
+	<!-- card three -->
+		<article class="cardThree">
 			<header>
-				<h3>Specifications</h3>
+				<h1>Snakes On A Plane</h1>
 			</header>
 
-			<ul>
-				<li>Length:</li>
-				<li>Rated:</li>
-			</ul>
-			<h5>Product availability at time of purchase not guaranteed.</h5>
-		</section>
+			<section class="sectionOne">
 
-		<section class="sectionThree">
-			<h3>Price</h3>
-			<ul>
-				<li>1-5: $9.99</li>
-				<li>5-10: $7.99</li>
-				<li>10+: $5.99</li>
-			</ul>
-		</section>
+				<img src="../img/snakes.jpg" alt="snakes">
 
-</article>
+				<div>
+					<p>
+						<!-- start slipsum code -->
 
-<!-- card three -->
-	<article class="cardThree">
-		<header>
-			<h1>Snakes On A Plane</h1>
-		</header>
+						I've had it with these mothafuckin' snakes, on this mothafuckin' plane! Everybody strap in, I'm about to open some fuckin' windows!
 
-		<section class="sectionOne">
+						<!-- please do not remove this line -->
 
-			<img src="../img/snakes.jpg" alt="snakes">
+						<div style="display:none;">
+						<a href="http://slipsum.com">lorem ipsum</a></div>
 
-			<div>
-				<p>
-					<!-- start slipsum code -->
+						<!-- end slipsum code -->
+					</p>
+				</div>
 
-					I've had it with these mothafuckin' snakes, on this mothafuckin' plane! Everybody strap in, I'm about to open some fuckin' windows!
+				<div class="availability">
+					<p>Available</p>
+				</div>
+			</section>
 
-					<!-- please do not remove this line -->
+			<section class="sectionTwo">
+				<header>
+					<h3>Specifications</h3>
+				</header>
 
-					<div style="display:none;">
-					<a href="http://slipsum.com">lorem ipsum</a></div>
+				<ul>
+					<li>Length:</li>
+					<li>Rated:</li>
+				</ul>
+				<h5>Product availability at time of purchase not guaranteed.</h5>
+			</section>
 
-					<!-- end slipsum code -->
-				</p>
-			</div>
+			<section class="sectionThree">
+				<h3>Price</h3>
+				<ul>
+					<li>1-5: $9.99</li>
+					<li>5-10: $7.99</li>
+					<li>10+: $5.99</li>
+				</ul>
+			</section>
 
-			<div class="availability">
-				<p>Available</p>
-			</div>
-		</section>
+		</article>
 
-		<section class="sectionTwo">
+	<!-- card four -->
+		<article class="cardFour">
 			<header>
-				<h3>Specifications</h3>
+				<h1>Black Snake Moan</h1>
 			</header>
 
-			<ul>
-				<li>Length:</li>
-				<li>Rated:</li>
-			</ul>
-			<h5>Product availability at time of purchase not guaranteed.</h5>
-		</section>
+			<section class="sectionOne">
 
-		<section class="sectionThree">
-			<h3>Price</h3>
-			<ul>
-				<li>1-5: $9.99</li>
-				<li>5-10: $7.99</li>
-				<li>10+: $5.99</li>
-			</ul>
-		</section>
+				<img src="../img/blackSnakeMoan.jpg" alt="blackSnakeMoan">
 
-	</article>
+				<div>
+					<p>
+						<!-- start slipsum code -->
 
-<!-- card four -->
-	<article class="cardFour">
-		<header>
-			<h1>Black Snake Moan</h1>
-		</header>
+						Collar yo dog!
 
-		<section class="sectionOne">
+						<!-- please do not remove this line -->
 
-			<img src="../img/blackSnakeMoan.jpg" alt="blackSnakeMoan">
+						<div style="display:none;">
+						<a href="http://slipsum.com">lorem ipsum</a></div>
 
-			<div>
-				<p>
-					<!-- start slipsum code -->
+						<!-- end slipsum code -->
+					</p>
+				</div>
 
-					Collar yo dog!
+				<div class="availability">
+					<p>Available</p>
+				</div>
+			</section>
 
-					<!-- please do not remove this line -->
+			<section class="sectionTwo">
+				<header>
+					<h3>Specifications</h3>
+				</header>
 
-					<div style="display:none;">
-					<a href="http://slipsum.com">lorem ipsum</a></div>
+				<ul>
+					<li>Length:</li>
+					<li>Rated:</li>
+				</ul>
+				<h5>Product availability at time of purchase not guaranteed.</h5>
+			</section>
 
-					<!-- end slipsum code -->
-				</p>
-			</div>
+			<section class="sectionThree">
+				<h3>Price</h3>
+				<ul>
+					<li>1-5: $9.99</li>
+					<li>5-10: $7.99</li>
+					<li>10+: $5.99</li>
+				</ul>
+			</section>
 
-			<div class="availability">
-				<p>Available</p>
-			</div>
-		</section>
-
-		<section class="sectionTwo">
-			<header>
-				<h3>Specifications</h3>
-			</header>
-
-			<ul>
-				<li>Length:</li>
-				<li>Rated:</li>
-			</ul>
-			<h5>Product availability at time of purchase not guaranteed.</h5>
-		</section>
-
-		<section class="sectionThree">
-			<h3>Price</h3>
-			<ul>
-				<li>1-5: $9.99</li>
-				<li>5-10: $7.99</li>
-				<li>10+: $5.99</li>
-			</ul>
-		</section>
-
-	</article>
+		</article>
+	</div>
 
 </body>
 </html>
