add more specific layout styling, small tweaks to HTML

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ The availability element extends the full width of the card, with a dark grey ba
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Samuel L's Movies</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="quiz.css">
 </head>
 
@@ -68,11 +69,11 @@ The availability element extends the full width of the card, with a dark grey ba
 
 				<img src="../img/unbreakable.png" alt="unbreakable">
 
-				<div>
+				<div id="descriptionOne" class="description">
 					<p>
 						<!-- start slipsum code -->
 
-						Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
+						"Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends."
 
 						<!-- please do not remove this line -->
 
@@ -90,18 +91,18 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionTwo">
 				<header>
-					<h3>Specifications</h3>
+					<h4>Specifications</h4>
 				</header>
 
 				<ul>
-					<li>Length:</li>
-					<li>Rated:</li>
+					<li>Length: 1:42</li>
+					<li>Rated: PG-13</li>
 				</ul>
 				<h5>Product availability at time of purchase not guaranteed.</h5>
 			</section>
 
 			<section class="sectionThree">
-				<h3>Price</h3>
+				<h4>Price</h4>
 				<ul>
 					<li>1-5: $9.99</li>
 					<li>5-10: $7.99</li>
@@ -121,11 +122,11 @@ The availability element extends the full width of the card, with a dark grey ba
 
 				<img src="../img/pulpFiction.jpg" alt="pulpFiction">
 
-				<div>
+				<div id="descriptionTwo" class="description">
 					<p>
 						<!-- start slipsum code -->
 
-						Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+						"Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass."
 
 						<!-- please do not remove this line -->
 
@@ -143,18 +144,18 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionTwo">
 				<header>
-					<h3>Specifications</h3>
+					<h4>Specifications</h4>
 				</header>
 
 				<ul>
-					<li>Length:</li>
-					<li>Rated:</li>
+					<li>Length: 2:34</li>
+					<li>Rated: R</li>
 				</ul>
 				<h5>Product availability at time of purchase not guaranteed.</h5>
 			</section>
 
 			<section class="sectionThree">
-				<h3>Price</h3>
+				<h4>Price</h4>
 				<ul>
 					<li>1-5: $9.99</li>
 					<li>5-10: $7.99</li>
@@ -174,11 +175,11 @@ The availability element extends the full width of the card, with a dark grey ba
 
 				<img src="../img/snakes.jpg" alt="snakes">
 
-				<div>
+				<div id="descriptionThree" class="description">
 					<p>
 						<!-- start slipsum code -->
 
-						I've had it with these mothafuckin' snakes, on this mothafuckin' plane! Everybody strap in, I'm about to open some fuckin' windows!
+						"I've had it with these mothafuckin' snakes, on this mothafuckin' plane! Everybody strap in, I'm about to open some fuckin' windows!"
 
 						<!-- please do not remove this line -->
 
@@ -196,18 +197,18 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionTwo">
 				<header>
-					<h3>Specifications</h3>
+					<h4>Specifications</h4>
 				</header>
 
 				<ul>
-					<li>Length:</li>
-					<li>Rated:</li>
+					<li>Length: 1:45</li>
+					<li>Rated: R</li>
 				</ul>
 				<h5>Product availability at time of purchase not guaranteed.</h5>
 			</section>
 
 			<section class="sectionThree">
-				<h3>Price</h3>
+				<h4>Price</h4>
 				<ul>
 					<li>1-5: $9.99</li>
 					<li>5-10: $7.99</li>
@@ -227,11 +228,11 @@ The availability element extends the full width of the card, with a dark grey ba
 
 				<img src="../img/blackSnakeMoan.jpg" alt="blackSnakeMoan">
 
-				<div>
+				<div id="descriptionFour" class="description">
 					<p>
 						<!-- start slipsum code -->
 
-						Collar yo dog!
+						"Collar yo dog!"
 
 						<!-- please do not remove this line -->
 
@@ -249,18 +250,18 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionTwo">
 				<header>
-					<h3>Specifications</h3>
+					<h4>Specifications</h4>
 				</header>
 
 				<ul>
-					<li>Length:</li>
-					<li>Rated:</li>
+					<li>Length: 1:56</li>
+					<li>Rated: R</li>
 				</ul>
 				<h5>Product availability at time of purchase not guaranteed.</h5>
 			</section>
 
 			<section class="sectionThree">
-				<h3>Price</h3>
+				<h4>Price</h4>
 				<ul>
 					<li>1-5: $9.99</li>
 					<li>5-10: $7.99</li>
