fix broken img links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionOne">
 
-				<img src="../img/unbreakable.png" alt="unbreakable">
+				<img src="img/unbreakable.png" alt="unbreakable">
 
 				<div id="descriptionOne" class="description">
 					<p>
@@ -121,7 +121,7 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionOne">
 
-				<img src="../img/pulpFiction.jpg" alt="pulpFiction">
+				<img src="img/pulpFiction.jpg" alt="pulpFiction">
 
 				<div id="descriptionTwo" class="description">
 					<p>
@@ -174,7 +174,7 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionOne">
 
-				<img src="../img/snakes.jpg" alt="snakes">
+				<img src="img/snakes.jpg" alt="snakes">
 
 				<div id="descriptionThree" class="description">
 					<p>
@@ -227,7 +227,7 @@ The availability element extends the full width of the card, with a dark grey ba
 
 			<section class="sectionOne">
 
-				<img src="../img/blackSnakeMoan.jpg" alt="blackSnakeMoan">
+				<img src="img/blackSnakeMoan.jpg" alt="blackSnakeMoan">
 
 				<div id="descriptionFour" class="description">
 					<p>
